examples/deployment-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
  - port: 6000
    targetPort: 6000
    protocol: TCP
    name: http
  selector:
    app: backend
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      containers:
      - name: backend
        image: polarsquad/example-backend:v2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
        ports:
        - containerPort: 6000
