examples/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubers-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubers
