examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubers
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubers
